--- a/html/form.html
+++ b/html/form.html
@@ -25,7 +25,7 @@
         <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./about.html">Features</a>
+        <a class="nav-link" href="./about.html">About</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="./form.html">Form</a>
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-
+      
     </main>
 
     <footer class="extra-margin-lg">
