--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./html/about.html">Features</a>
+        <a class="nav-link" href="./html/about.html">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./html/form.html">Form</a>
@@ -111,7 +111,7 @@
         </div>
       </div>
     </footer>
-    
+
     <!-- Attach Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
